LOOKS: Fix squished up task status icons with lengthy text

--- a/src/app/tasks/task-sheet-viewer/task-sheet-viewer.scss
+++ b/src/app/tasks/task-sheet-viewer/task-sheet-viewer.scss
@@ -120,6 +120,7 @@
     .content {
       font-size: 1.2em;
       font-weight: lighter;
+      max-width: 90%;
       .callout {
         display: inline-block;
       }
